movie-catalog-service/k8s/movie-catalog-service-load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-catalog-service-load-balancer-service
  annotations:
    author: DhiegoDuarte
    email: dhiegoduarte@gmail.com
    company: ClaroBR
  labels:
    application: movie-catalog-service
    revision: TODO_COMO_COLOCAR_O_COMMIT_AQUI #4c511f16ef2644854d04cabebfcecc82be0eb04f
    env: stage
    version: "1.0.0"
    owner: movies-squad
spec:
  selector:
    component: movie-catalog-service-pod
  ports: 
    - name: http
      port: 80
      targetPort: 8081 
  type: LoadBalancer # Essa conf faz com que um novo LoadBalancer seja aprovisionado e configurado na AWS
