movie-catalog-service/k8s/movie-catalog-service-net-esb-legado-relacionar-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: net-esb-legado-relacionar # o nome deve ser igual ao nome do Service correspondente
subsets:
- addresses:
  - ip: 10.28.28.64
  # - ip: 216.58.202.164
  # - ip: 216.58.202.131
  ports:
  - port: 6091

---
kind: Service
apiVersion: v1
metadata:
  name: net-esb-legado-relacionar
spec:
  ports:
    - port: 6091
      targetPort: 6091
