movie-catalog-service/k8s/movie-catalog-service-ingress.yaml
apiVersion: extensions/v1beta1 # Ingress resources will no longer be served from extensions/v1beta1 in v1.19. Migrate use to the networking.k8s.io/v1beta1 API, available since v1.14. (currently using v1.12 kops)
kind: Ingress
metadata:
  name: movie-catalog-service-ingress
  annotations:
    author: DhiegoDuarte
    email: dhiegoduarte@gmail.com
    company: ClaroBR
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: movie-catalog-service-secret # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
  labels:
    application: movie-catalog-service
    revision: TODO_COMO_COLOCAR_O_COMMIT_AQUI #4c511f16ef2644854d04cabebfcecc82be0eb04f
    env: stage
    version: "1.0.0"
    owner: movies-squad
spec:
  rules:
  - http:
      paths:
        - path: / 
          backend:
            serviceName: movie-catalog-service-cluster-ip-service
            servicePort: 80
